# euler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  state-euler-implementation.md
include/: euler_comm.h  euler_control.h  euler_mavlink.h  euler_mission.h  euler_types.h
sim/: run_simulation.sh  swarm_sim.c
sim/gazebo/models/euler_drone/: model.config  model.sdf
sim/gazebo/plugins/: CMakeLists.txt  euler_gazebo_plugin.cpp
sim/gazebo/worlds/: swarm_50.world
src/: euler_comm.c  euler_control.c  euler_mavlink.c  euler_mission.c
tests/: test_comm.c  test_control.c  test_main.c  test_types.c  test_udp.c
